# archer-calc

./: .gitignore  .travis.yml  LICENSE  Main.hs  README.md  archercalc.cabal
.dev-only/: Paths_archercalc.hs
docs/: ArcherCalc.lyx
src/: BuiltIn.hs  BuiltInDate.hs  BuiltInMath.hs  BuiltInText.hs  CodeGen.hs  Env.hs  Error.hs  Eval.hs  EvalState.hs  Infer.hs  Lexer.hs  LitCust.hs  Main.hs  Optimize.hs  Parser.hs  Pretty.hs  Syntax.hs  Type.hs  Types.hs
src/BuiltIn/: Common.hs  Date.hs  Finance.hs  Logic.hs  Math.hs  Stats.hs  Text.hs
tests/: Test.hs  TestCommon.hs  TestDate.hs  TestFinance.hs  TestLogic.hs  TestMath.hs  TestStats.hs  TestText.hs
