name:                archercalc
version:             0.0.3.0
synopsis:            RSA Archer Calculated Field Playground
category:            Compilers/Interpreters
description:         RSA Archer Calculated Field Playground
homepage:            https://github.com/ahodgen/archercalc
bug-reports:         https://github.com/ahodgen/archercalc/issues
license:             MIT
license-file:        LICENSE
author:              Aaron Hodgen
maintainer:          ahodgen@kill-9.org
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository    HEAD
  type:              git
  location:          https://github.com/ahodgen/archercalc

executable archer-calc
  main-is:          Main.hs
  hs-source-dirs:   .
  build-depends:      archercalc
                    , base
                    , haskeline
                    , text
                    , containers
                    , mtl
                    , repline
  ghc-options: -rtsopts -auto-all -Wall -Werror -O2 -fwarn-incomplete-patterns
               -fwarn-tabs -fwarn-incomplete-record-updates -Werror
               -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010

library
  hs-source-dirs:   src
  exposed-modules:
    BuiltIn
    BuiltIn.Common
    BuiltIn.Date
    BuiltIn.Finance
    BuiltIn.Logic
    BuiltIn.Math
    BuiltIn.Stats
    BuiltIn.Text
    CodeGen
    Env
    EvalState
    Error
    Eval
    Infer
    Lexer
    LitCust
    Optimize
    Parser
    Pretty
    Syntax
    Type
    Types
  build-depends:      ansi-terminal
                    , base
                    , math-functions
                    , pretty
                    , parsec
                    , statistics
                    , text
                    , time
                    , containers
                    , mtl
                    , time-locale-compat
                    , transformers
                    , vector
  ghc-options:   -Wall -O2 -fwarn-incomplete-patterns -Werror -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Test.hs
  ghc-options:      -Wall -threaded -rtsopts
  build-depends:      archercalc
                    , base
                    , containers
                    , hspec
                    , text
                    , time
                    , time-locale-compat
  default-language:    Haskell2010
  ghc-options:   -Wall
